--- a/index.html
+++ b/index.html
@@ -128,6 +128,20 @@
             </div>
         </section>
     </main>
+    <footer>
+        <div class="logo">
+            <img src="images/Logo.png" alt="">
+            <p>
+            <p class="icon">
+                <i class="fab fa-dribbble-square icon-large"></i>
+                <i class="fab fa-instagram-square"></i>
+                <i class="fab fa-twitter-square"></i>
+                <i class="fab fa-youtube"></i>
+            </p>
+            Copyright <i class="far fa-copyright"></i> 2022 Football
+            </p>
+        </div>
+    </footer>
 </body>
 
 </html>
