--- a/index.html
+++ b/index.html
@@ -131,14 +131,12 @@
     <footer>
         <div class="logo">
             <img src="images/Logo.png" alt="">
-            <p>
-            <p class="icon">
-                <i class="fab fa-dribbble-square icon-large"></i>
+            <p> <i class="fab fa-dribbble-square"></i>
                 <i class="fab fa-instagram-square"></i>
                 <i class="fab fa-twitter-square"></i>
                 <i class="fab fa-youtube"></i>
             </p>
-            Copyright <i class="far fa-copyright"></i> 2022 Football
+            <p>Copyright <i class="far fa-copyright"></i> 2022 Football
             </p>
         </div>
     </footer>
