--- a/index.html
+++ b/index.html
@@ -31,98 +31,93 @@
             <div class="player">
                 <img src="images/players/player-1.png" alt="">
                 <h3 class="player-name" class="player-name">Neymar Jr</h3>
-                <p class="player-details" class="player-details"> Lorem ipsum dolor sit amet consectetur adipisicing
-                    elit. Culpa laborum, saepe
-                    necessitatibus illo
+                <p class="player-details" class="player-details">Neymar da Silva Santos, Jr. Brazilian football (soccer)
+                    player who was one of the most prolific
+                    scorers in his country's storied football history.
                 </p>
             </div>
             <div class="player">
                 <img src="images/players/player-2.png" alt="">
                 <h3 class="player-name">Lionel Messi</h3>
-                <p class="player-details"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa laborum,
-                    saepe
-                    necessitatibus illo
+                <p class="player-details"> Lionel Andrés Messi who was named FIFA world player of the year five times
+                    (2009–12 and 2015).
                 </p>
             </div>
             <div class="player">
                 <img src="images/players/player-3.png" alt="">
                 <h3 class="player-name">Cristiano Ronaldo</h3>
-                <p class="player-details"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa laborum,
-                    saepe
-                    necessitatibus illo
+                <p class="player-details">Cristiano Ronaldo Portuguese football (soccer) forward who was one of the
+                    greatest players of his
+                    generation.
                 </p>
             </div>
             <div class="player">
                 <img src="images/players/player-4.png" alt="">
                 <h3 class="player-name">Paulo Dybala</h3>
-                <p class="player-details"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa laborum,
-                    saepe
-                    necessitatibus illo
+                <p class="player-details"> Paulo Exequiel Dybala is an Argentine footballer who plays as a forward for
+                    Serie A club Juventus and the Argentina national team.
                 </p>
             </div>
             <div class="player">
                 <img src="images/players/player-5.png" alt="">
                 <h3 class="player-name">Mesut Ozil </h3>
-                <p class="player-details"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa laborum,
-                    saepe
-                    necessitatibus illo
+                <p class="player-details">Mesut Özil is a German professional footballer who plays as an attacking
+                    midfielder for
+                    Süper Lig club Fenerbahçe.
                 </p>
             </div>
             <div class="player">
                 <img src="images/players/player-6.png" alt="">
                 <h3 class="player-name">Mauro Icardi </h3>
-                <p class="player-details"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa laborum,
-                    saepe
-                    necessitatibus illo
+                <p class="player-details"> Mauro Emanuel Icardi is an Argentine professional footballer who plays as a
+                    striker for Ligue 1 club
+                    Paris Saint-Germain.
                 </p>
             </div>
             <div class="player">
                 <img src="images/players/player-7.png" alt="">
                 <h3 class="player-name">Di Maria</h3>
-                <p class="player-details"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa laborum,
-                    saepe
-                    necessitatibus illo
+                <p class="player-details"> Ángel Fabián Di María is an Argentine footballer who plays for Ligue 1 club
+                    Paris Saint-Germain and the Argentina national team.
                 </p>
             </div>
             <div class="player">
                 <img src="images/players/player-8.png" alt="">
                 <h3 class="player-name">Kylian Mbappé</h3>
-                <p class="player-details"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa laborum,
-                    saepe
-                    necessitatibus illo
+                <p class="player-details"> Kylian Mbappé Lottin is a French footballer who plays as a forward for Ligue
+                    1 club Paris Saint-Germain and the France national team.
                 </p>
             </div>
             <div class="player">
                 <img src="images/players/player-9.png" alt="">
                 <h3 class="player-name">Mohamed Salah</h3>
-                <p class="player-details"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa laborum,
-                    saepe
-                    necessitatibus illo
+                <p class="player-details"> Mohamed Salah Hamed Mahrous Ghaly a footballer who plays as a forward for
+                    Premier League club Liverpool and Egypt national team.
                 </p>
             </div>
 
             <div class="player">
                 <img src="images/players/player-10.png" alt="">
                 <h3 class="player-name">Harry Kane</h3>
-                <p class="player-details"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa laborum,
-                    saepe
-                    necessitatibus illo
+                <p class="player-details"> Harry Edward Kane MBE is an English footballer who plays as a striker for
+                    Premier League club Tottenham Hotspur and England
+                    national team.
                 </p>
             </div>
             <div class="player">
                 <img src="images/players/player-11.png" alt="">
                 <h3 class="player-name">Kevin De Bruyne</h3>
-                <p class="player-details"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa laborum,
-                    saepe
-                    necessitatibus illo
+                <p class="player-details"> Kevin De Bruyne is a Belgian footballer who
+                    plays as a midfielder for Premier League club Manchester City and the
+                    Belgium national team.
                 </p>
             </div>
             <div class="player">
                 <img src="images/players/player-12.png" alt="">
                 <h3 class="player-name">Philippe Coutinho</h3>
-                <p class="player-details"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa laborum,
-                    saepe
-                    necessitatibus illo
+                <p class="player-details"> Philippe Coutinho Correia is a Brazilian footballer who plays for Spanish
+                    club Barcelona and the Brazil
+                    national team.
                 </p>
             </div>
             </div>
