--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Footbal World</title>
+    <title>Footbal Pagol</title>
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/bc5b118897.js" crossorigin="anonymous"></script>
 
@@ -17,10 +17,10 @@
     <main>
         <section class="banner">
             <div class="tournament-name">
-                <h1>Conmebol
-                    Copa America
-                    2021</h1>
-                <i class="fas fa-tv"></i> <span class="tv-broadcast">Watch Live</span>
+                <h1> <span class="vivid-color">Watch</span> The Heavy Weight Football Matches With <span
+                        class="vivid-color">Football Pagol</span><a target="_blank" href="https://www.espn.com/"><i
+                            class="fas fa-tv"></i></a></h1>
+
             </div>
             <div class="banner-pic">
                 <img src="images/banner.png" alt="">
