--- a/index.html
+++ b/index.html
@@ -122,6 +122,43 @@
             </div>
             </div>
         </section>
+        <!-- Optional item start -->
+        <section>
+            <div>
+                <h1 class="center-position">World Most Favourite Chaps</h1>
+                <p class="center-position">Please have a look to know more about world favourite professional
+                    footballers.</p>
+            </div>
+            <div class="image-adjust favourite-players">
+                <div>
+                    <p class="favp-image"><img src="images/players/player-1.png" alt="">
+                    </p>
+                    <p>
+                        <a class="biography-button" target="_blank"
+                            href="https://en.wikipedia.org/wiki/Neymar">Biography</a>
+                    </p>
+                </div>
+
+
+                <div>
+                    <p class="favp-image"><img src="images/players/player-2.png" alt="">
+                    </p>
+                    <p>
+                        <a class="biography-button" target="_blank"
+                            href="https://en.wikipedia.org/wiki/Lionel_Messi">Biography</a>
+                    </p>
+                </div>
+                <div>
+                    <p class="favp-image"><img src="images/players/player-9.png" alt="">
+                    <p>
+                        <a class="biography-button" target="_blank"
+                            href="https://en.wikipedia.org/wiki/Mohamed_Salah">Biography</a>
+                    </p>
+                </div>
+            </div>
+        </section>
+        <!-- Optional Item ends here     -->
+
     </main>
     <footer>
         <div class="logo">
